--- a/Run-Conquer-Client-Tests/Run-Conquer-Client-Tests.csproj
+++ b/Run-Conquer-Client-Tests/Run-Conquer-Client-Tests.csproj
@@ -34,6 +34,10 @@
     <Reference Include="nunit.framework">
       <Private>False</Private>
     </Reference>
+    <Reference Include="UnityEngine, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\..\..\..\Software\Unity\Data\Managed\UnityEngine.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="JsonSerializerTests.cs" />
