--- a/Assembly-CSharp-vs.csproj
+++ b/Assembly-CSharp-vs.csproj
@@ -46,20 +46,21 @@
 	</Reference>
   </ItemGroup>
   <ItemGroup>
-     <Compile Include="Assets\GameController.cs" />
-     <Compile Include="Assets\LocationRequester.cs" />
-     <Compile Include="Assets\MeController.cs" />
-     <Compile Include="Assets\Models\GameInstanceModel.cs" />
-     <Compile Include="Assets\Models\JsonSerializableAttribute.cs" />
-     <Compile Include="Assets\Models\JsonSerializer.cs" />
-     <Compile Include="Assets\Models\MapModel.cs" />
-     <Compile Include="Assets\Models\PlayerController.cs" />
-     <Compile Include="Assets\Models\PlayerModel.cs" />
-     <Compile Include="Assets\Models\TeamModel.cs" />
-     <Compile Include="Assets\ObservableCollection.cs" />
+     <Compile Include="Assets\game\GameController.cs" />
+     <Compile Include="Assets\game\MeController.cs" />
      <Compile Include="Assets\map\MapCreator.cs" />
      <Compile Include="Assets\map\MapRequester.cs" />
      <Compile Include="Assets\map\MapTileController.cs" />
+     <Compile Include="Assets\menu\menuStart.cs" />
+     <Compile Include="Assets\models\GameInstanceModel.cs" />
+     <Compile Include="Assets\models\JsonSerializableAttribute.cs" />
+     <Compile Include="Assets\models\JsonSerializer.cs" />
+     <Compile Include="Assets\models\MapModel.cs" />
+     <Compile Include="Assets\models\PlayerController.cs" />
+     <Compile Include="Assets\models\PlayerModel.cs" />
+     <Compile Include="Assets\models\TeamModel.cs" />
+     <Compile Include="Assets\shared\LocationRequester.cs" />
+     <Compile Include="Assets\shared\ObservableCollection.cs" />
      <Compile Include="Assets\util\GoogleMapsTransformation.cs" />
      <Compile Include="Assets\util\MercatorProjection.cs" />
  <Reference Include="ICSharpCode.SharpZipLib">
