added a non-functional menu for video capturing
+ added a non-functional menu for video capturing
+ added app icon
* smoothed background texture

--- a/Assembly-CSharp-vs.csproj
+++ b/Assembly-CSharp-vs.csproj
@@ -59,6 +59,7 @@
      <Compile Include="Assets\map\MapModel.cs" />
      <Compile Include="Assets\map\MapRequester.cs" />
      <Compile Include="Assets\map\MapTileController.cs" />
+     <Compile Include="Assets\menu\MenuRoadMap.cs" />
      <Compile Include="Assets\menu\MenuStart.cs" />
      <Compile Include="Assets\menu\MenuTeamSelection.cs" />
      <Compile Include="Assets\test\HexTestController.cs" />
