--- a/Assembly-CSharp-vs.csproj
+++ b/Assembly-CSharp-vs.csproj
@@ -64,6 +64,7 @@
      <Compile Include="Assets\menu\MenuStart.cs" />
      <Compile Include="Assets\menu\MenuTeamSelection.cs" />
      <Compile Include="Assets\menu\MenuWaitingRoom.cs" />
+     <Compile Include="Assets\menu\MenuWin.cs" />
      <Compile Include="Assets\test\HexTestController.cs" />
      <Compile Include="Assets\util\GoogleMapsTransformation.cs" />
      <Compile Include="Assets\util\JsonSerializableAttribute.cs" />
